--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
+
+body {
+  background-color: rgb(4, 53, 128);
+  display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.container{
+    background-color:rgb(136, 173, 230);
+    width: 25vw;
+    height: 40vh;
+}
+.result-container {
+    display: flex;
+	justify-content: flex-end;
+	align-items: center;
+    position: relative;
+    background-color: rgb(226, 233, 236);
+}
+
+.result-container #result {
+    word-wrap: break-word;
+  max-width: calc(100% - 40px);
+}
+
+
+
 /* @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
 * {
@@ -29,12 +57,13 @@ input[type=checkbox] {
 	box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
 	padding: 20px;
 	width: 350px;
-	max-width: 100%;
+    max-width: 100%;
+   
 }
 
 .result-container {
 	background-color: rgba(0, 0, 0, 0.4);
-	display: flex;
+	 display: flex;
 	justify-content: flex-start;
 	align-items: center;
 	position: relative;
